style(DynamicTable): Fix font size in .action-wrap #patch

--- a/src/components/styled-atlaskit/DynamicTable/DynamicTable.scss
+++ b/src/components/styled-atlaskit/DynamicTable/DynamicTable.scss
@@ -137,7 +137,7 @@
   }
 
   .action-wrap {
-    font-size: $font-size-h5;
+    font-size: $font-size-h6;
     font-weight: 400;
 
     button {
